--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,14 @@
         <video src="./src/videos/liu.mp4" id="video" controls></video>
       </div>
       <div id="comment">
+        <span>弹&nbsp;&nbsp;&nbsp;幕:</span>
         <input type="text" class="bulletScreen-input" />
-        下次发弹幕时间<span class='time'>5</span>s
+        可发弹幕<span class='time'>5</span>s
         <button class="button">发送弹幕</button>
         <input type="color" class="bulletScreen-color" />
+        <div class="blank">
+          弹幕数:<span class="bulletCount">200</span>
+        </div>
       </div>
     </div>
   </body>
